k8s-manifest/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp-backend
  template:
    metadata:
      labels:
        app: chatapp-backend
    spec:
      containers:
      - name: chatapp-backend
        image: rishindra2308/chatapp-backend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5001
