k8s-manifest/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-frontend-deployment
  namespace: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatapp-frontend
  template:
    metadata:
      labels:
        app: chatapp-frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: rishindra2308/chat-app-frontend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
