k8s-manifest/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongo-data
          mountPath: /data/db

      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-pvc
