k8s-manifest/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
spec:
  selector:
    app: chatapp-backend
  ports:
  - port: 5001
    targetPort: 5001
