k8s-manifest/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-frontend-service
  namespace: chat-app
spec:
  selector:
    app: chatapp-frontend
  ports:
  - port: 80
    targetPort: 80
